CHATS_SIT/force-app/main/default/objects/T_SBSD_ROADMAP_CORR_ID__c.object
<CustomObject>
    <description>Roadmap Correspondences</description>
    <fields>
        <fullName>APPLICATION_PROCESS_QUEUE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Process Queue</label>
        <referenceTo>T_APPLN_PRCS_QUEUE__c</referenceTo>
        <relationshipLabel>Roadmap Correspondence</relationshipLabel>
        <relationshipName>Roadmap_Correspondence</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CASE_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Case ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDN_CASE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case ID</label>
        <referenceTo>T_SBSD_CASE__c</referenceTo>
        <relationshipLabel>Roadmap Correspondence</relationshipLabel>
        <relationshipName>Roadmap_Correspondence</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBMS_CASE_NUM__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CBMS Case Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DATE_RECEIVED__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>INDIVIDUAL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Individual ID</label>
        <referenceTo>T_SBSD_INDIV__c</referenceTo>
        <relationshipLabel>Roadmap Correspondence</relationshipLabel>
        <relationshipName>Roadmap_Correspondence</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ROADMAP_CORR_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Roadmap Correspondence ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Roadmap Correspondence</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ROADMAP_CORR_ID__c</columns>
        <columns>CBMS_CASE_NUM__c</columns>
        <columns>CASE_ID__c</columns>
        <columns>DATE_RECEIVED__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}{00000}</displayFormat>
        <label>Roadmap ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Roadmap Correspondence</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>