CHATS_SIT/force-app/main/default/objects/T_SBSD_ROADMAP_CORR_ID__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ROADMAP_CORR_ID__c</columns>
    <columns>CBMS_CASE_NUM__c</columns>
    <columns>CASE_ID__c</columns>
    <columns>DATE_RECEIVED__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>