CHATS_SIT/force-app/main/default/objects/T_SBSD_ROADMAP_CORR_ID__c/listViews/all_rmc.listView-meta.xml
<ListView>
    <fullName>all_rmc</fullName>
    <columns>NAME</columns>
    <columns>ROADMAP_CORR_ID__c</columns>
    <columns>CBMS_CASE_NUM__c</columns>
    <columns>CASE_ID__c</columns>
    <columns>DATE_RECEIVED__c</columns>
    <filterScope>Everything</filterScope>
    <label>all rmc</label>
</ListView>